<resources>
    <string name="app_name">Notepad</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="notes">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="new_note">New Note</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="message_error_password">Incorrect Password</string>
    <string name="message_error_connection">No Network Connection</string>
    <string name="description_button_add_note">Open Add Note Screen</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="remove_from_favorites">Remove From Favorites</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="favorites">Favorites</string>
    <string name="locked">Locked</string>
    <string name="info">Info</string>
    <string name="open_drawer_navigation_menu">Open drawer navigation menu</string>
    <string name="close_drawer_navigation_menu">Close drawer navigation menu</string>
    <string name="change_theme">Change Theme</string>
    <string name="clear_database">Clear Database</string>
    <string name="nature">Nature</string>
    <string name="lighting_storm">Lighting Storm</string>
    <string name="fire">Fire</string>
    <string name="ocean">Ocean</string>
    <string name="sunny_sky">Sunny Sky</string>
    <string name="select_theme">Select Theme</string>
    <string name="delete_search_history">Delete Search History</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no_result_found">No Result Found</string>
    <string name="is_24hours_format">MM/dd/yyyy \'at\' hh:mm</string>
    <string name="is_12hours_format">MM/dd/yyyy \'at\' hh:mm aa</string>
</resources>
