<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/icon_delete"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/save"
        android:title="@string/save"
        android:icon="@drawable/icon_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/heart"
        android:title="@string/add_to_favorites"
        android:icon="@drawable/icon_heart_outline"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/padlock"
        android:title="@string/lock"
        android:icon="@drawable/icon_lock_open"
        app:showAsAction="ifRoom"
        android:visible="false" />

</menu>